WareHouse form debug

--- a/ServiceComplex/Pages/BaseData/Contract.cshtml
+++ b/ServiceComplex/Pages/BaseData/Contract.cshtml
@@ -89,7 +89,7 @@
                                 <div class="n-chk mt-40">
                                     <label class="new-control new-checkbox checkbox-primary Current-color">
                                         <input id="superseded"  type="checkbox" class="Current-color new-control-input product-timing">
-                                        <span class="new-control-indicator"></span>جایگزین قرارداد دیگری شود
+                                        <span class="new-control-indicator"></span>جایگزین قرارداد دیگری شود(فسخ قرارداد)
                                     </label>
                                 </div>
                             </div>                                             
@@ -202,7 +202,7 @@
 
  <script src="~/assets/js/datepicker/persian-datepicker.min.js"></script>
 <script src="~/assets/js/datepicker/persian-date.min.js"></script>
-    <script src="~/Source/Js/BaseData/Contract.js"></script>
+<script src="~/Source/Js/BaseData/Contract.js"></script>
 
     <script>
 
