--- a/ServiceComplex/Pages/BaseData/Partial/_DefineContractRate.cshtml
+++ b/ServiceComplex/Pages/BaseData/Partial/_DefineContractRate.cshtml
@@ -59,7 +59,7 @@
                 <input id="contractType" value="@Model.contractDto.CntType" class="form-control" hidden>
                 <div class="form-row">
                     <button onclick="AddProductsFinal()" id="AddProductsFinal" type="button" class="form-control btn btn-success col-lg-1" style="display:none">تایید </button>
-                    <button onclick="Cancel()" id="Cancel" type="button" class="form-control btn btn-light-warning col-lg-1" style="display:none">انصراف</button>
+                    <button onclick="Cancel()" id="Cancel" type="button" class="form-control btn btn-light-warning col-lg-1" >انصراف</button>
 
                 </div>
                 </div>
