--- a/ServiceComplex/Pages/BaseData/Partial/_CreateAccountClub.cshtml
+++ b/ServiceComplex/Pages/BaseData/Partial/_CreateAccountClub.cshtml
@@ -5,6 +5,7 @@
 
 
 
+
 <div class="page-header">
     <div class="page-title">
         <h3>افزودن مشترک جدید</h3>
@@ -60,7 +61,7 @@
                                                 </div>
 
                                                 <div class="form-group col-md-3">
-                                                    <label for=""> کد ملی </label>
+                                                    <label for=""> کد ملی<span class="error">*</span> </label>
                                                     <input asp-for="@Model.AccClbNationalCode" type="number" class="form-control" placeholder="کد ملی">
                                                     <span asp-validation-for="@Model.AccClbNationalCode" class="error"></span>
                                                 </div>
@@ -151,10 +152,10 @@
                                             <div class="form-row mb-8">
                                                 <div class="form-group col-md-3">
                                                     <label for=""> قرارداد <span class="error">*</span></label>
-                                                    @*<select asp-for="AccFrContract" asp-items="@(new SelectList(Model.Jobs,"Value","Text"))" type="text" class="form-control">
-                                                    <option value="@null">--انتخاب کنید--</option>
+                                                    <select name="CntFrContract" id="CntFrContract" asp-items="@(new SelectList(_service.SelectOptionContract(),"Value","Text"))" type="text" class="form-control">
+                                                        <option value="">--انتخاب کنید--</option>
                                                     </select>
-                                                    <span asp-validation-for="AccFrContract" class="error"></span>*@
+                                                    <span asp-validation-for="AccFrContract" class="error"></span>
                                                 </div>
 
                                                 <div class="form-group col-md-3">
@@ -196,8 +197,11 @@
 
                                 </div>
                             </div>
-                            <button id="addSubmit" onclick="submitAdd()" style="margin-right:90%" type="button" class="btn btn-info btn-sm btn-rounded pull-left">تایید فرم</button>
-
+                           
+                        </div>
+                        <div class="row col-lg-12" style="margin-right:80%">
+                            <button id="addSubmit" onclick="submitAdd()"type="button" class="btn btn-info btn-sm btn-rounded  col-lg-1">تایید فرم</button>
+                            <button onclick="CancelCreate()" id="Cancel" type="button" class="btn btn-light-warning btn-rounded  col-lg-1">انصراف</button>
                         </div>
                     </div>
                 </div>
