--- a/ServiceComplex/Pages/BaseData/Partial/_EditAccountClub.cshtml
+++ b/ServiceComplex/Pages/BaseData/Partial/_EditAccountClub.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Application.BaseData.Dto.EditAccountClub
+@inject Application.BaseData.IBaseDataService _service
 @{
     ViewData["Title"] = "ویرایش مشترک";
 }
@@ -140,10 +141,10 @@
                                                     <div class="form-row mb-8">
                                                 <div class="form-group col-md-3">
                                                     <label for=""> قرارداد <span class="error">*</span></label>
-                                                    @*<select asp-for="AccFrContract" asp-items="@(new SelectList(Model.Jobs,"Value","Text"))" type="text" class="form-control">
-                                                        <option value="@null">--انتخاب کنید--</option>
+                                                    <select asp-for="AccFrContract" asp-items="@(new SelectList(Model.Contracts,"Value","Text"))" type="text" class="form-control">
+                                                        <option value="">--انتخاب کنید--</option>
                                                     </select>
-                                                    <span asp-validation-for="AccFrContract" class="error"></span>*@
+                                                    <span asp-validation-for="AccFrContract" class="error"></span>
                                                 </div>
 
                                                         <div class="form-group col-md-3">
@@ -216,9 +217,12 @@
                                             <input type="hidden" asp-for="AccClbUid"/>
                                         </div>
                                     </div>
-                                    <button onclick="submitEdit()" id="editSubmit" style="margin-right:90%" type="button" class="btn btn-info btn-sm btn-rounded pull-left">تایید </button>
 
                                 </div>
+                        <div class="row col-lg-12" style="margin-right:80%">
+                            <button onclick="submitEdit()" id="editSubmit" type="button" class="btn btn-info btn-sm btn-rounded  col-lg-1">تایید </button>
+                            <button onclick="CancelCreate()" id="Cancel" type="button" class="btn btn-light-warning btn-rounded  col-lg-1">انصراف</button>
+                        </div>
                             </div>
                         </div>
                     </form>
